--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <section class="section-2">
                 <div class="container">
                     <ul class="section-2-list list">
-                        <li class="section-2-item">
+                        <li class="section-2-item-1">
                             <h3 class="section-2-title-1">Внимание к деталям</h3>
                             <p class="section-2-description-1">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                        <li class="section-2-item">
+                        <li class="section-2-item-2">
                             <h3 class="section-2-title-2">Пунктуальность</h3>
                             <p class="section-2-description-2">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                        <li class="section-2-item" >
+                        <li class="section-2-item-3" >
                             <h3 class="section-2-title-3">Планирование</h3>
                             <p class="section-2-description-3">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
-                        <li class="section-2-item">
+                        <li class="section-2-item-4">
                             <h3 class="section-2-title-4">Современные технологии</h3>
                             <p class="section-2-description-4">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -108,7 +108,7 @@
                 <div class="container">
                     <h2 class="section-4-title">Наша команда</h2>
                     <ul class="section-4-list list">
-                        <li class="section-4-employee">
+                        <li class="section-4-employee-1">
                             <img class="section-4-img1" src="./images/img-sek4-1.jpg" 
                             width="270" 
                             height="260" 
@@ -116,7 +116,7 @@
                             <h3 class="section-4-img1-name" >Игорь Демьяненко</h3>
                             <p class="section-4-img1-profession">Product Designer</p>
                         </li>
-                        <li class="section-4-employee">
+                        <li class="section-4-employee-2">
                             <img class="section-4-img2"  src="./images/img-sek4-2.jpg" 
                             width="270" 
                             height="260" 
@@ -125,7 +125,7 @@
                             <h3 class="section-4-img2-name">Ольга Репина</h3>
                             <p class="section-4-img2-profession">Frontend Developer</p>
                         </li>
-                        <li class="section-4-employee">
+                        <li class="section-4-employee-3">
                             <img class="section-4-img3"  src="./images/img-sek4-3.jpg" 
                             width="270" 
                             height="260" 
@@ -134,7 +134,7 @@
                             <h3 class="section-4-img3-name">Николай Тарасов</h3>
                             <p class="section-4-img3-profession">Marketing</p>
                         </li>
-                        <li class="section-4-employee">
+                        <li class="section-4-employee-4">
                             <img class="section-4-img4"  src="./images/img-sek4-4.jpg" 
                             width="270" 
                             height="260" 
