--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 
                     <ul class="second-portfolio-list list"> 
 
-                        <li  class="second-portfolio-item"> 
+                        <li  class="second-portfolio-item box"> 
                             <a class="link" href=""> <img class="second-portfolio-list-img1" src="./images-portfolio/img1.jpg"
                             width="370" 
                             alt="открытый ноутбук">
@@ -61,7 +61,7 @@
                             <p class="second-portfolio-item-img1-description">Веб-сайт</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item">
+                        <li class="second-portfolio-item box">
                             <a class="link" href=""> <img class="second-portfolio-list-img2" src="./images-portfolio/img2.jpg" 
                             width="370"
                             alt="игроки играют в баскетбол">
@@ -69,7 +69,7 @@
                             <p class="second-portfolio-item-img2-description">Дизайн</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item">
+                        <li class="second-portfolio-item box ">
                             <a class="link" href=""> <img class="second-portfolio-list-img3" src="./images-portfolio/img3.jpg"
                             width="370" 
                             alt="логотип ресторана">
@@ -77,7 +77,7 @@
                             <p class="second-portfolio-item-img3-description">Приложение</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item"> 
+                        <li class="second-portfolio-item box"> 
                             <a class="link" href=""><img class="second-portfolio-list-img4" src="./images-portfolio/img4.jpg" 
                             width="370" 
                             alt="наушники">
@@ -85,7 +85,7 @@
                             <p class="second-portfolio-item-img4-description">Маркетинг</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item"> 
+                        <li class="second-portfolio-item box"> 
                             <a class="link" href=""><img class="second-portfolio-list-img5" src="./images-portfolio/img5.jpg" 
                             width="370" 
                             alt="приложение">
@@ -93,7 +93,7 @@
                             <p class="second-portfolio-item-img5-description">Приложение</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item"> 
+                        <li class="second-portfolio-item box"> 
                             <a class="link" href=""><img class="second-portfolio-list-img6" src="./images-portfolio/img6.jpg" 
                             width="370" 
                             alt="монитор">
@@ -101,7 +101,7 @@
                             <p class="second-portfolio-item-img6-description">Веб-сайт</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item">
+                        <li class="second-portfolio-item box">
                             <a class="link" href=""><img class="second-portfolio-list-img7" src="./images-portfolio/img7.jpg" 
                             width="370" 
                             alt="открытая книга">
@@ -109,7 +109,7 @@
                             <p class="second-portfolio-item-img7-description">Дизайн</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item"> 
+                        <li class="second-portfolio-item box"> 
                             <a class="link" href=""><img class="second-portfolio-list-img8" src="./images-portfolio/img8.jpg" 
                             width="370" 
                             alt="ярлык">
@@ -117,7 +117,7 @@
                             <p class="second-portfolio-item-img8-description">Маркетинг</p>
                             </a>
                         </li>
-                        <li class="second-portfolio-item"> 
+                        <li class="second-portfolio-item box"> 
                             <a class="link" href=""><img class="second-portfolio-list-img9" src="./images-portfolio/img9.jpg" 
                             width="370" 
                             alt="работа за ноутбуком">
