--- a/portfolio.html
+++ b/portfolio.html
@@ -155,14 +155,17 @@
 
     <!-- footer -->
     <footer class="footer">
-        <div class="container"> 
+        <div class="container">
             <a class="footer-logo link" href="./index.html">Web<span class="footer-studio-logo">Studio</span></a>
             <address class="footer-address">
                 <ul class="footer-address-list list link">
-                    <li><a class="footer-adress-item link" href="https://goo.gl/maps/XvD9XZvy2aRC84E2A" target="_blank"
-                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a class="footer-mail-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="footer-tel-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="footer-item-adress"><a class="footer-adress-item link"
+                            href="https://goo.gl/maps/XvD9XZvy2aRC84E2A" target="_blank" rel="noopener noreferrer">г. Киев,
+                            пр-т Леси Украинки, 26</a></li>
+                    <li class="footer-item-mail"><a class="footer-mail-item link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="footer-item-tel"><a class="footer-tel-item link" href="tel:+380961111111">+38 096 111 11
+                            11</a></li>
                 </ul>
             </address>
         </div>
