--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- section-1 -->
        
             <section class="section-1">
-                <div class="container">
+                <div class="section-1-content container">
                     
                         <h1 class="section-1-title">Эффективные решения <br><span class="section-1-title-span">для вашего бизнеса</span></h1>
                         <button class="section-1-button " type="button">Заказать услугу</button>
